2014-09-09 Matt:
	* Committing debugged vector potential calculation. Right now two ways to calculate the velocity.
	* Adding python script to make Vector potential plots
	* Adding python script to make Cherenkov Ring plots
	* Adding python script to make filelists for Zscan and Cherenkov scan
	* Adding scripts to compare velocity calculation procedure
	* Adding scripts to format cherenkov scan results
	* Adding script to format the vector potential comparison for ZHS vs. Geant4
	* Adding class for Antenna and one for setting up the antenna
	

2014-08-5 Matt:
	* Adding vector potential calculation. First pass looks reasonable.
	* Update SetupAntenna to loop over angles for fixed position.
	* Fixed timing bin factor in calculation of vector potential

2014-08-04 Matt:
	* Minor updates to settings.
	* Going to add calculation of electric field for step information. Tag first

2014-05-29 Matt:
	* Updating some minor changes during running.
	* Going to build realistic setup for ELS site.

2014-03-27 Matt:
	* Add plotting macro for shower comparisons
	* Update ntuple maker to account for nParticles

2014-03-25 Matt:
	* Add option to specify the number of initial particles.

2014-03-19 Matt:
	* Added option to set tracking threshold
	* Added script to make simple tree.  We will see if it is useful
	* Committing fixed version of code to make simple tree

2014-03-13 Matt:
	* Adding python scripts used to make all the plots
	* Adding C scripts for formatting plot output
	* Adding submission scripts to give idea of how to run

2014-03-12 Matt:
	* TTree takes too long! Going back to text files.
	* Added modularity to save both track and step output in separate files.

2014-03-10 Matt:
	* After many changes, finally figured out my issue with particle counting. Commit changes before next update.
	* Next Update will be to create a TTree to be output of Geant information.

2014-02-14 Matt:
	* Committing revisions and current stable working version.