@@ -7,19 +7,16 @@
 EventAction::EventAction(std::ofstream* trkFile, 
 			 std::ofstream* stepFile,
 			 std::ofstream* vFile,
-			 std::ofstream* eFile,
 			 std::vector<Antenna*>* ants) :			 
   m_trkOutput(NULL),
   m_stepOutput(NULL),
   //m_treeWriter(NULL)
   m_VPotOut(NULL),
-  m_EfieldOut(NULL),
   m_ants(NULL)
 {
   m_trkOutput  = trkFile;
   m_stepOutput = stepFile;
   m_VPotOut    = vFile;
-  m_EfieldOut  = eFile;
   m_ants       = ants;
 }
 
@@ -32,7 +29,6 @@ EventAction::~EventAction()
   m_trkOutput  = NULL;
   m_stepOutput = NULL;
   m_VPotOut    = NULL;
-  m_EfieldOut  = NULL;
   m_ants       = NULL;
 }
 
@@ -45,7 +41,6 @@ void EventAction::BeginOfEventAction(const G4Event* evt)
   (*m_trkOutput)  << "Event: " << evt->GetEventID() << G4endl;
   (*m_stepOutput) << "Event: " << evt->GetEventID() << G4endl;
   (*m_VPotOut)    << "Event: " << evt->GetEventID() << G4endl;
-  (*m_EfieldOut)  << "Event: " << evt->GetEventID() << G4endl;
   for(unsigned int i=0; i<m_ants->size(); ++i)
     m_ants->at(i)->clear();
 }
@@ -71,15 +66,9 @@ void EventAction::EndOfEventAction(const G4Event* evt)
 
   // Write vector potential info
   G4double Ax=0, Ay=0, Az=0;
-  G4double Ax1=0, Ay1=0, Az1=0;
-  G4double time = 0, time1 = 0;
+  G4double time = 0;
   for(unsigned int i=0; i<m_ants->size(); ++i){
     Antenna* ant = m_ants->at(i);
-
-    (*m_EfieldOut) << "Antenna: "<<i<<" Pos: "
-		   <<ant->getX()<<" "
-		   <<ant->getY()<<" "
-		   <<ant->getZ()<<G4endl;
 
     (*m_VPotOut) << "Antenna: "<<i<<" Pos: "
 		 <<ant->getX()<<" "
@@ -89,7 +78,7 @@ void EventAction::EndOfEventAction(const G4Event* evt)
     
     // Now save the data points
     unsigned int nP = ant->getN();
-    G4double step   = ant->getTStep() * 1e-9; // Put into [s]
+    //G4double step   = ant->getTStep() * 1e-9; // Put into [s]
     for(unsigned int ip=0; ip<nP; ++ip){
       ant->getPoint(ip,time,Ax,Ay,Az);
 
@@ -99,19 +88,6 @@ void EventAction::EndOfEventAction(const G4Event* evt)
 		   << Ay   << " " 
 		   << Az   << G4endl;
 
-      // Write the electric field for this point by
-      // obtaining the next point for vector potential.
-      // Make sure to not go out of points of the array
-      if( ip < nP - 1 ){
-	ant->getPoint(ip+1,time1,Ax1,Ay1,Az1);
-	(*m_EfieldOut) << "\t"
-		       << time << " "
-		       << (Ax1-Ax)/step << " "
-		       << (Ay1-Ay)/step << " "
-		       << (Az1-Az)/step << G4endl;
-	
-      }
-      
     }// end loop over points
 
   }
